# unruggable-rust-esp32

./: .gitignore  README  README.md
esp32-solana-signer/: Cargo.toml  TRANSACTION_README.md  buildnflash.md  keypair.json  main_w_shutdown.rs  og_no_protocol_firmware.rs  stash_keypair_code.txt  stash_sign_input.rs  stash_signer.txt
esp32-solana-signer/src/: main.rs  twofa.rs  tx_introspection.rs
solana-transaction-builder/: CHANGES.md
solana-transaction-builder/go/: go.mod  go.sum  signer.go
solana-transaction-builder/js/: make_unsigned_tx_b64.js  package-lock.json  package.json
solana-transaction-builder/rust/solana-tx-signer/: Cargo.toml  README.md  client.md  main.stash
solana-transaction-builder/rust/solana-tx-signer/examples/: esp32_transaction_demo.rs
solana-transaction-builder/rust/solana-tx-signer/src/: main.rs
squads-quickstart-ts/: dev_multisig.ts  generateSimpleTransfer.ts  generate_unsigned_execute_tx.ts  gpt-dev.ts  squads_multisig.ts  unsigned_tx.txt
twofa/: Cargo.toml
twofa/src/: main.rs
