[package]
name = "esp32-solana-signer"
version = "0.1.0"
authors = ["hogyzen12 <billypapas12@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-solana-signer"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]
# Enable TOTP-based 2FA support
twofa = [
  "dep:data-encoding",
  "dep:hmac",
  "dep:sha1",
  "dep:subtle"
]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1"
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["rand_core"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
getrandom = { version = "0.2", features = ["custom"] }
esp-idf-sys = { version = "0.36.1", features = ["binstart"] }
bs58 = "0.5"
base64 = "0.22"

# 2FA (TOTP) deps are optional; pulled in by `--features twofa`
data-encoding = { version = "2.9", optional = true }
hmac           = { version = "0.12", optional = true }
sha1           = { version = "0.10", optional = true }
subtle         = { version = "2.6", optional = true }

[build-dependencies]
embuild = "0.33"
